// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should have the correct default styles 1`] = `
.circuit-4 {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  background-color: #D8DDE1;
  border-radius: 24px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
  height: 24px;
  width: 40px;
  overflow: visible;
}

.circuit-4:focus {
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0 {
  display: block;
  background-color: #FAFBFC;
  box-shadow: 0 2px 0 0 #9DA7B1;
  position: absolute;
  top: 50%;
  -webkit-transform: translate3d(4px,-50%,0);
  -ms-transform: translate3d(4px,-50%,0);
  transform: translate3d(4px,-50%,0);
  -webkit-transition: box-shadow 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  -webkit-transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  height: 16px;
  width: 16px;
  border-radius: 16px;
}

.circuit-2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<button
  aria-checked="false"
  class="circuit-4 circuit-5"
  role="switch"
  type="button"
>
  <span
    class="circuit-0 circuit-1"
  />
  <span
    class="circuit-2 circuit-3"
  >
    off
  </span>
</button>
`;

exports[`Switch should have the correct on styles 1`] = `
.circuit-2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  background-color: #D8DDE1;
  border-radius: 24px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
  height: 24px;
  width: 40px;
  overflow: visible;
  background-color: #3388FF;
}

.circuit-4:focus {
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0 {
  display: block;
  background-color: #FAFBFC;
  box-shadow: 0 2px 0 0 #9DA7B1;
  position: absolute;
  top: 50%;
  -webkit-transform: translate3d(4px,-50%,0);
  -ms-transform: translate3d(4px,-50%,0);
  transform: translate3d(4px,-50%,0);
  -webkit-transition: box-shadow 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  -webkit-transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  height: 16px;
  width: 16px;
  border-radius: 16px;
  box-shadow: 0 2px 0 0 #1760CE;
  -webkit-transform: translate3d( calc(24px - 4px),-50%,0 );
  -ms-transform: translate3d( calc(24px - 4px),-50%,0 );
  transform: translate3d( calc(24px - 4px),-50%,0 );
}

<button
  aria-checked="true"
  class="circuit-4 circuit-5"
  role="switch"
  type="button"
>
  <span
    class="circuit-0 circuit-1"
  />
  <span
    class="circuit-2 circuit-3"
  >
    on
  </span>
</button>
`;
